# sertit-utils

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pypirc  CHANGES.md  LICENSE  NOTICE  README.md  environment.yml  pyproject.toml  pytest.ini  readthedocs.yml  requirements-doc.txt  requirements.txt  setup.cfg  setup.py  tox-conda.ini  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
CI/COTS/: Shapely-1.7.0-cp37-cp37m-win_amd64.whl  deepforest-0.0.1-py3-none-any.whl  geopandas-0.7.0-py3-none-any.whl  geopandas-0.8.1-py3-none-any.whl  jpy-0.10.0.dev1-cp37-cp37m-win_amd64.whl  rasterio-1.1.3-cp37-cp37m-win_amd64.whl
CI/DATA/: DIM.dim  aoi.geojson  aoi.kml  raster.tif  raster_mask.geojson  raster_masked.tif  raster_sieved.tif  test_tar.tar  vector.geojson
CI/DATA/DIM.data/: dim.img
CI/SCRIPTS/: __init__.py  script_utils.py  test_archives.py  test_arcpy.py  test_ci.py  test_display.py  test_file.py  test_files.py  test_geo.py  test_geometry.py  test_log.py  test_logs.py  test_misc.py  test_network.py  test_np.py  test_path.py  test_raster.py  test_rasters.py  test_rasters_rio.py  test_s3.py  test_snap.py  test_strings.py  test_sys.py  test_type.py  test_types.py  test_unistra.py  test_vectors.py  test_xml.py
ci/: conftest.py  script_utils.py  test_archives.py  test_arcpy.py  test_ci.py  test_dask.py  test_display.py  test_exception.py  test_files.py  test_geometry.py  test_logs.py  test_misc.py  test_network.py  test_os_utils.py  test_path.py  test_rasters.py  test_rasters_rio.py  test_s3.py  test_snap.py  test_strings.py  test_types.py  test_unistra.py  test_vectors.py  test_xml.py
doc_template/: _lunr_search.inc.mako  config.mako  html.mako  index.html  logo.mako
docs/: conf.py  index.html  index.js  index.md
docs/_templates/: custom-class-template.rst  custom-module-template.rst
docs/notebooks/: 01_getting_started.ipynb
docs/sertit/: arcpy.html  ci.html  display.html  files.html  index.html  logs.html  misc.html  network.html  rasters.html  rasters_rio.html  snap.html  strings.html  vectors.html
sertit/: __init__.py  __meta__.py  archives.py  arcpy.py  ci.py  dask.py  display.py  exception.py  files.py  geometry.py  logs.py  misc.py  network.py  os_utils.py  path.py  perf.py  rasters.py  rasters_rio.py  s3.py  snap.py  strings.py  types.py  unistra.py  vectors.py  version.py  xml.py
sertit_utils/: __init__.py  version.py
sertit_utils/core/: file_utils.py  log_utils.py  np_utils.py  sys_utils.py  type_utils.py
sertit_utils/eo/: geo.py  geo_utils.py  raster.py  raster_utils.py
sertit_utils/network/: control.py
(+86 files in other folders)
